--- a/WEB/src/app.css
+++ b/WEB/src/app.css
@@ -1,10 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-}
-
-.error {
-  color: red;
+  color: #333;
 }
 
 .day {
@@ -12,4 +9,17 @@
   height: 125px;  
   padding: 10px;
   margin: 0;
+}
+
+button {
+  background-color: #007bff;
+  color: white;
+  padding: 0.5em 1em;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
 }
