--- a/WEB/src/app.css
+++ b/WEB/src/app.css
@@ -4,9 +4,10 @@
   color: #333;
 }
 
-body {
+main {
   padding-left: 5vw;
   padding-right: 5vw;
+  padding-bottom: min(100px, 10vh);
   margin-top: 5vh;
   overflow-x: hidden;
 }
